<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/loginLogo"
        android:src="@drawable/agriculture"/>

    <TextView
        android:id="@+id/loginHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/loginHeader"
        android:textColor="#858282"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/loginHeader2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/antic"
        android:text="@string/loginHeader2"
        android:textColor="#858282"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/usernameL"
            android:hint="@string/username"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordL"
            android:hint="@string/password"
            android:layout_marginTop="10sp"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/forgotPassButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@color/transparent"
            android:text="@string/forgotPassButton"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/loginButton"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/newUserButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/transparent"
            android:fontFamily="sans-serif-medium"
            android:text="@string/newUserButton"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>