<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassVerification"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:id="@+id/forgotPassLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/loginLogo"
        android:src="@drawable/agriculture"/>

    <TextView
        android:id="@+id/forgotPassHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/forgotPassHeader"
        android:textColor="#858282"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/forgotPassHeader2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/antic"
        android:text="@string/forgotPassHeader2"
        android:textColor="#858282"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/verifyEmail"
            android:hint="@string/email"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/verifyPhone"
            android:hint="@string/phone"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/forgotPassVerifyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:layout_marginTop="50dp"
            android:text="@string/forgotPassVerifyButton"/>

    </LinearLayout>

</LinearLayout>